Add simple library example

--- a/index.html
+++ b/index.html
@@ -11,7 +11,50 @@
 </head>
 
 <body>
+    <header class="header">
+        <h1>Library</h1>
+        <nav>
+            <p>a</p>
+            <p>a</p>
+        </nav>
+    </header>
+    <main class="main">
+        <button class="add-book-button">+ Add a book</button>
+        <div class="library">
+            <div class="book">
+                <h2 class="book-name">Book Name</h2>
+                <p>By <span class="author-name">Author Name</span></p>
+                <p class="book-info"><span class="book-state">Reading</span> - <span
+                        class="book-pages-read">50</span>/<span class="book-pages-total">250</span></p>
+            </div>
 
+            <div class="book">
+                <h2 class="book-name">Book Name</h2>
+                <p>By <span class="author-name">Author Name</span></p>
+                <p class="book-info"><span class="book-state">Reading</span> - <span
+                        class="book-pages-read">50</span>/<span class="book-pages-total">250</span></p>
+            </div>
+            <div class="book">
+                <h2 class="book-name">Book Name</h2>
+                <p>By <span class="author-name">Author Name</span></p>
+                <p class="book-info"><span class="book-state">Reading</span> - <span
+                        class="book-pages-read">50</span>/<span class="book-pages-total">250</span></p>
+            </div>
+            <div class="book">
+                <h2 class="book-name">Book Name</h2>
+                <p>By <span class="author-name">Author Name</span></p>
+                <p class="book-info"><span class="book-state">Reading</span> - <span
+                        class="book-pages-read">50</span>/<span class="book-pages-total">250</span></p>
+            </div>
+            <div class="book">
+                <h2 class="book-name">Book Name</h2>
+                <p>By <span class="author-name">Author Name</span></p>
+                <p class="book-info"><span class="book-state">Reading</span> - <span
+                        class="book-pages-read">50</span>/<span class="book-pages-total">250</span></p>
+            </div>
+        </div>
+
+    </main>
 </body>
 
 </html>
