--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <header class="header">
-        <h1>Library</h1>
-        <nav>
+        <h1 class="title">Library</h1>
+        <nav class="nav">
             <p>a</p>
             <p>a</p>
         </nav>
@@ -53,8 +53,39 @@
                         class="book-pages-read">50</span>/<span class="book-pages-total">250</span></p>
             </div>
         </div>
-
     </main>
+
+    <form class="menu hide" id="menu">
+        <div class="input-book-name">
+            <label for="input-book-name">Book Name</label>
+            <input id="input-book-name" name="input-book-name" type="text">
+        </div>
+
+        <div class="author-name">
+            <label for="author-name">Author Name</label>
+            <input id="author-name" name="author-name" type="text">
+        </div>
+
+        <div class="state-pages">
+            <label for="state">State</label>
+            <select id="state" name="state" form="menu">
+                <option value="to-read">To read</option>
+                <option value="reading">Reading</option>
+                <option value="read">Read</option>
+            </select>
+            <label for="pages-read">Pages Read</label>
+            <input id="pages-read" name="pages-read" type="number">
+            <label for="total-pages">Total Pages</label>
+            <input id="total-pages" name="total-pages" type="number">
+        </div>
+
+        <div class="menu-buttons">
+            <button class="create-button" type="button">Create</button>
+            <button class="update-button" type="button">Update</button>
+            <button class="remove-button" type="button">Remove</button>
+        </div>
+
+    </form>
 </body>
 
 </html>
