Add click events

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
     </main>
 
     <form class="menu hide" id="menu">
+        <button class="close-menu-button" type="button">x</button>
+
         <div class="input-book-name">
             <label for="input-book-name">Book Name</label>
             <input id="input-book-name" name="input-book-name" type="text">
@@ -80,9 +82,9 @@
         </div>
 
         <div class="menu-buttons">
-            <button class="create-button" type="button">Create</button>
-            <button class="update-button" type="button">Update</button>
-            <button class="remove-button" type="button">Remove</button>
+            <button class="create-button hide" type="button">Create</button>
+            <button class="update-button hide" type="button">Update</button>
+            <button class="remove-button hide" type="button">Remove</button>
         </div>
 
     </form>
