Fix remove error and improve check style

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="./script.js" defer="defer"></script>
+
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/animation.css">
+
+    <script src="./scipts/check.js" defer="defer"></script>
+    <script src="./scipts/script.js" defer="defer"></script>
 </head>
 
 <body>
@@ -51,11 +55,6 @@
         <div class="input-total-pages">
             <label for="input-total-pages">Total Pages</label>
             <input id="input-total-pages" name="input-total-pages" type="number">
-        </div>
-
-        <div class="input-book-state">
-            <label for="input-book-state">Read</label>
-            <input id="input-book-state" name="input-book-state" type="checkbox">
         </div>
 
         <div class="menu-buttons">
