--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/animation.css">
 
-    <script src="./scipts/check.js" defer="defer"></script>
-    <script src="./scipts/script.js" defer="defer"></script>
+    <script src="./scipts/menuFunctions.js" defer="defer"></script>
+    <script src="./scipts/book.js" defer="defer"></script>
+    <script src="./scipts/main.js" defer="defer"></script>
 </head>
 
 <body>
