Add initial book

--- a/index.html
+++ b/index.html
@@ -26,19 +26,7 @@
     </header>
     <main class="main">
         <button class="add-book-button">+ Add a book</button>
-        <div class="library">
-            <div class="book">
-                <h2 class="book-name">Book Name</h2>
-                <p>By <span class="author-name">Author Name</span></p>
-                <p>With <span class="total-pages">250</span> pages</p>
-                <div class="book-options">
-                    <button class="open-menu-button">e</button>
-                    <input class="read-check" type="checkbox">
-                </div>
-
-            </div>
-
-        </div>
+        <div class="library"></div>
     </main>
 
     <form class="menu hide" id="menu">
