Add icons to menu

--- a/index.html
+++ b/index.html
@@ -41,17 +41,26 @@
 
         <div class="input-container input-book-name">
             <label for="input-book-name">*Book Name</label>
-            <input id="input-book-name" name="input-book-name" type="text">
+            <div>
+                <input id="input-book-name" name="input-book-name" type="text">
+                <i class="fa-solid"></i>
+            </div>
         </div>
 
         <div class="input-container input-author-name">
             <label for="input-author-name">*Author Name</label>
-            <input id="input-author-name" name="input-author-name" type="text">
+            <div>
+                <input id="input-author-name" name="input-author-name" type="text">
+                <i class="fa-solid"></i>
+            </div>
         </div>
 
         <div class="input-container input-total-pages">
             <label for="input-total-pages">*Total Pages</label>
-            <input id="input-total-pages" name="input-total-pages" type="number">
+            <div>
+                <input id="input-total-pages" name="input-total-pages" type="number">
+                <i class="fa-solid"></i>
+            </div>
         </div>
 
         <div class="menu-buttons">
