--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
     <link rel="stylesheet" href="fontawesome/css/solid.min.css">
     <link rel="stylesheet" href="fontawesome/css/fontawesome.min.css">
 
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/animation.css">
+    <link rel="stylesheet" href="styles/general.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/menu.css">
+    <link rel="stylesheet" href="styles/blocker.css">
 
-    <script src="./scipts/validation.js" defer="defer"></script>
-    <script src="./scipts/menuFunctions.js" defer="defer"></script>
-    <script src="./scipts/book.js" defer="defer"></script>
-    <script src="./scipts/main.js" defer="defer"></script>
+    <script src="./src/validation.js" defer="defer"></script>
+    <script src="./src/menuFunctions.js" defer="defer"></script>
+    <script src="./src/book.js" defer="defer"></script>
+    <script src="./src/main.js" defer="defer"></script>
 </head>
 
 <body>
