--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="styles/menu.css">
     <link rel="stylesheet" href="styles/blocker.css">
 
-    <script src="./src/main.js" defer="defer"></script>
+    <script src="./script.js" defer="defer"></script>
 </head>
 
 <body>
